<resources>
    <string name="app_name">LanXchange</string>
    <string name="title_activity_lxc">LanXchange</string>
    <string name="nofiles">Files shared by LanXchange on other devices automatically appear here.\nTap + to start sharing</string>
    <string name="menu_stop">Stop LanXchange</string>
    <string name="menu_add">Share file(s)</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_pcversion">PC version</string>
	<string name="menu_settings">Settings</string>
    <string name="ui_yourfiles">Your files</string>
    <string name="ui_sharedwithyou">Shared with you</string>
    <string name="ui_taptoload">Tap to download</string>
    <string name="ui_connecting">Connecting</string>
    <string name="ui_downloading">Downloading: </string>
    <string name="ui_uploading">Uploading: </string>
    <string name="ui_available">Tap to open</string>
    <string name="error_cantopen_title_listempty">No matching app found</string>
    <string name="error_cantopen_text_listempty">No app was found that can open this file. If you think this is wrong and you have a matching app, try opening the file there. If that works, send me a mail!</string>
    <string name="error_cantopen_title_unknowntype">Unknown filetype</string>
    <string name="error_cantopen_text_unknowntype">This file cannot be opened directly from LanXchange, because the filetype is unknown. Do you want to choose the correct app yourself?</string>
    <string name="error_cantopen_ok">OK</string>
    <string name="error_cantopen_cancel">Cancel</string>
    <string name="error_cantopen_choose">Choose</string>
    <string name="error_cantopen_mail">Mail</string>
    <string name="error_cantopen_complain">Complain</string>
    <string name="ui_holdtoremove">Hold to remove</string>
    <string name="error_sdcard_title">Cannot write files</string>
    <string name="error_sdcard_text">LanXchange cannot access your internal device storage (where files are downloaded to). This means your device in its current state cannot be used to transfer files with LanXchange. This should obviously never be the case. Please write me at mail@lanxchange.com so I can fix this. LanXchange will now shut down.</string>
    <string name="error_sdcard_ok">OK</string>
    <string name="error_cantoffer_title">Sharing failed</string>
    <string name="error_cantoffer_text">Sorry, LanXchange was not able to share this. If you think it should be, send me a mail!</string>
    <string name="error_cantoffer_ok">OK</string>
    <string name="error_cantoffer_mail">Mail</string>
    <string name="error_generic_from_core_title">Error</string>
    <string name="ui_nowifi">Please enable Wi-Fi!</string>
	<string name="ui_undo_removelocalfile">No longer sharing</string>
	<string name="snackbar_undoremovelocal_action">Undo</string>
    <string name="ui_undo_canceldownload">Cancelled download</string>
    <string name="snackbar_undocanceldownload_action">restart</string>
    <string name="ui_undo_cancelupload">Cancelled upload</string>
    <string name="notification_running_title">LanXchange running</string>
    <string name="notification_running_text">Tap to return to LanXchange</string>
    <string name="notification_action_quit">Stop LanXchange</string>
    <string name="notification_error_title">A problem occurred</string>
    <string name="notification_error_text">Tap to view details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_pcversion">PC version</string>
    <string name="help_send">How do I send files with LanXchange?</string>
    <string name="help_send_text">Just tap the + Button. Then select the file(s) you want to share. Thats it! All other devices in your local network can now use LanXchange to download the shared file.</string>
    <string name="help_receive">How do I receive files with LanXchange?</string>
    <string name="help_receive_text">Just start the app! LanXchange will automatically discover other devices in your local network running LanXchange and display all files that are shared by them. Just tap the file you want to download.</string>
    <string name="help_nofiles">Files from other devices don\'t show up!</string>
    <string name="help_nofiles_text">1. Be patient! Files take up to 20 seconds on some devices to appear. \n2. Make sure that all devices have Wifi enabled and are connected to the same network. \n3. Keeping the app open and the screen turned on also improves detection.\n4. Check that no firewall prevents LanXchange from accessing the network.\n5. Sharing between PC and Android? Starting the PC version first usually works better.\n6. Some devices offer a setting for wifi power-saving (in the wifi menu). Try turning that off, it doesn\'t save too much power, anyway.\n7. LanXchange is designed for small (home) networks. Big company or university networks may be too large for devices to find each other.</string>
	<string name="help_download_location">Where do downloaded files go?</string>
	<string name="help_download_location_text">By default, all files are saved to the internal memory of your device (also known as internal SD-Card). Look out for the \"Download\" folder. LanXchange also notifies Android about received files, so they should appear in all your apps. You can change the target directory in the settings.</string>
	<string name="help_multiple">Can I share multiple files at once?</string>
	<string name="help_multiple_text">Yes. If you have Android 4.3 (Jelly Bean M2) or higher, you can use the normal + button for this. Tap and hold a file to enable multi-selection. On older devices, you need to install a file manager/explorer app. Then, select multiple files there and choose \"Share\" and then \"LanXchange\"</string>
	<string name="help_filetypes">What kind of files can I share with LanXchange?</string>
	<string name="help_filetypes_text">Basically everything that is a file and that is stored locally on your phone. Files in cloud storage may or may not work, but even if they do keep in mind that they have to be downloaded in the background to be read by LanXchange and that may be slow.</string>
	<string name="help_android_selector_dumb">I cannot select other files than images, videos and audio!</string>
	<string name="help_android_selector_dumb_text">Lets say you want to share a .PDF file but the android file selector (the thing that pops up when you tap the + button) only offers images, videos and music. In this case, you can install a file manager/explorer from the store. Having such an app installed should allow you to use it for file selection - without type limitations. Another trick is to try sharing the file directly from another app. Most apps offer a \"Share with\" functionality - LanXchange should be one of the options.</string>
	<string name="help_download_select_target">Is it possible to save received files somewhere else?</string>
	<string name="help_download_select_target_text">Yes. Choose the destination directory in the settings. Currently, only the internal device storage is supported.</string>
    <string name="help_download_select_target_sdcard">I want to download files directly to the SD card!</string>
    <string name="help_download_select_target_sdcard_text">This can be complicated on Android, but the author is working on it and this feature is coming soon (TM).</string>
	<string name="help_share_crossplatform">Can I use LanXchange to transfer files between different platforms? (e.g. PC to Android, Mac to Windows)</string>
	<string name="help_share_crossplatform_text">Yes.</string>
	<string name="help_pcversion">Where can I get the PC version?</string>
	<string name="help_pcversion_text">Select "PC-Version" in the main menu (right where you selected "Help" to get here)</string>
	<string name="help_nofiles2">I tried everything, but I still cannot see files from other devices!</string>
	<string name="help_nofiles2_text">Sometimes restarting the app on both sides helps. If the problem persists, send me a mail! (Select About in the main menu)</string>
	<string name="help_bugfeature">I want feature XY, I found a bug.</string>
	<string name="help_bugfeature_text">Send me an email! To find my address, select \"About\" in the main menu. There, you will also find a button to send the last 3 log files to me via mail. Please make use of this feature if you found a problem, the contents of the log files are important to find out what went wrong.</string>
	<string name="help_category_general">F.A.Q.</string>
	<string name="about_category_general">About</string>
    <string name="about_category_debug">Debug options</string>
    <string name="about_category_licenses">3rd Party Licenses</string>
	<string name="about_version">Version</string>
	<string name="about_copyright">Copyright</string>
	<string name="about_copyright_text">© 2009–2017 Tobias Fleig\nAll rights reserved.</string>
	<string name="about_license">License</string>
	<string name="about_license_text">http://www.gnu.org/licenses/gpl-3.0.txt</string>
	<string name="about_3rd_party_licenses">License for Google Material Design Icons</string>
    <string name="about_licenses_icons">Material Design Icons</string>
    <string name="about_licenses_icons_text">© Google Inc. Used under license: CC-BY 4.0\nIcons unmodified, tap for license details.</string>
	<string name="about_licenses_support">Android Support Library</string>
	<string name="about_licenses_support_text">© The Android Open Source Project\nApache License 2.0 - tap for details.</string>
    <string name="about_licenses_filechooser">Android DirectoryChooser</string>
    <string name="about_licenses_filechooser_text">© 2013–2016 Pascal Hartig\nApache License 2.0 - tap for details.</string>
	<string name="about_source">Source Code</string>
	<string name="about_source_text">https://github.com/tfg13/LanXchange</string>
	<string name="about_mailme">Email me!</string>
	<string name="about_mailme_text">mail@lanxchange.com</string>
	<string name="about_twitter">Author on Twitter</string>
	<string name="about_twitter_text">https://twitter.com/tfg13</string>
	<string name="about_version_internal">Internal Version</string>
    <string name="about_debug_showlog">Show most recent log file</string>
    <string name="about_debug_showlog_text">Tap to open with default text viewer</string>
    <string name="about_debug_sendlogs">Send log files to developer</string>
    <string name="about_debug_sendlogs_text">Opens email app, sends 3 most recent logfiles</string>
	<string name="pcversion_header">Get the PC version at</string>
	<string name="pcversion_text">www.lanxchange.com</string>
	<string name="pcversion_url">https://www.lanxchange.com/</string>
	<string name="dialog_closewithrunning_title">Tranfers running in background!</string>
	<string name="help_android_selector_nofolder">I cannot select directories!</string>
    <string name="help_android_selector_nofolder_text">If you tap + but cannot select directories, try the other way around: Use a file-browser to select the folder and choose \"Share with\". LanXchange should be one of the options.</string>
    <string name="pref_registerdownloads_title">Show received files in Downloads app</string>
    <string name="pref_registerdownloads_text">Tell Android about completed downloads, so the files appear in the Downloads app. Does not work with incoming directories.</string>
    <string name="pref_select_download_path_title">Default download directory</string>
    <string name="pref_select_download_path_text">Default path</string>
    <string name="pref_askdownloadtarget_title">Ask for download target every time</string>
    <string name="pref_askdownloadtarget_text_on">Ignore default and prompt every time</string>
    <string name="pref_askdownloadtarget_text_off">Downloads go to default directory</string>
</resources>